<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.univapay.views.CustomEditText
        android:id="@+id/country_code_picker_text_view_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/checkout_address_search"
        android:inputType="text"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        app:drawableStart="@drawable/ic_search"
        />

    <ListView
        android:id="@+id/country_code_picker_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        >
    </ListView>
</LinearLayout>