<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/action_button"
            style="@style/Checkout.ActionButton.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checkout_button_next" />

    </android.support.constraint.ConstraintLayout>

</merge>