<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:orientation="horizontal"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/row_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@null"
        android:padding="10dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/row_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="10dp"
        />

</LinearLayout>
